--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,13 @@ __pycache__/
 # ipython nb checkpoints
 *.ipynb_checkpoints
 
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
